--- a/samples/calc.html
+++ b/samples/calc.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+        <script type="text/javascript" src="http://cache.soso.com/wenwen/js/jquery-1.6.2.min.js"></script>
         
         <script type="text/javascript" src="http://__SERVER_HOST__:__FILE_SERVER_PORT__/aardwolf.js"></script>
         <script type="text/javascript" src="http://__SERVER_HOST__:__FILE_SERVER_PORT__/calc.js"></script>
