添加了压缩的JS进行测试

--- a/FiddlerAddon/TestPages/ch3/CH3EX1.html
+++ b/FiddlerAddon/TestPages/ch3/CH3EX1.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>CH3EX1: Text Arranger Version 1.0</title>
 <script src="modernizr-1.6.min.js"></script>
-<script type="text/javascript" src="./javascript/ch3ex1.js"></script> 
+<script type="text/javascript" src="./javascript/ch3ex1.min.js"></script> 
 </head>
 <body>
 <div style="position: absolute; top: 50px; left: 50px;">
